--- a/c.ini
+++ b/c.ini
@@ -9,6 +9,7 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
+ruleset=DIRECT,https://raw.githubusercontent.com/md7286rr/rand/refs/heads/main/r.list
 ruleset=Choose,[]FINAL
 
 custom_proxy_group=Choose`url-test`.*`http://www.gstatic.com/generate_204`300,,50
