--- a/c.ini
+++ b/c.ini
@@ -13,7 +13,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/md7286rr/rand/refs/heads/main/r
 ruleset=DIRECT,[]GEOIP,IR
 ruleset=Choose,[]FINAL
 
-custom_proxy_group=Choose`url-test`.*`http://www.gstatic.com/generate_204`120,,50
+custom_proxy_group=Choose`url-test`.*`https://gstatic.com/generate_204`120,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
